--- a/socket-drawing/public/index.html
+++ b/socket-drawing/public/index.html
@@ -4,6 +4,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>socket.io drawings</title>
+
+        <style>
+            body {
+                margin: 0;
+                padding: 0;
+                outline: none;
+            }
+        </style>
+        
     </head>
     <body>
         <script src="/socket.io/socket.io.js"></script>
