get rid of unused jquery

--- a/socket-drawing/public/index.html
+++ b/socket-drawing/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>socket.io drawings</title>
+        <title>Socket Ripple</title>
 
         <style>
             body {
@@ -12,11 +12,10 @@
                 outline: none;
             }
         </style>
-        
+
     </head>
     <body>
         <script src="/socket.io/socket.io.js"></script>
-		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 		<script type="text/javascript" src="/p5/p5.js"></script>
 		<script src="main.js"></script>
     </body>
