--- a/socket-drawing/public/index.html
+++ b/socket-drawing/public/index.html
@@ -17,6 +17,8 @@
     <body>
         <script src="/socket.io/socket.io.js"></script>
 		<script type="text/javascript" src="/p5/p5.js"></script>
+        <script type="text/javascript" src="/p5/p5.sound.js"></script>
+
 		<script src="main.js"></script>
     </body>
 </html>
